--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
     <title>Password Strength Backround</title>
+    <link rel="icon" type="image/png" href="Assets/ej-spade.ico">
 </head>
 
 <body>
