--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
     <title>Password Strength Backround</title>
-    <link rel="icon" type="image/png" href="Assets/ej-spade.ico">
+    <link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
 </head>
 
 <body>
@@ -36,3 +36,5 @@
 </body>
 
 </html>
+
+<!-- Emmanuel Jose logo and favicon. © Emmanuel Jose. All Rights Reserved. -->
