--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta property="og:title" content="Password Strength Background" />
+		<meta property="og:image" content="Assets/meta-006-password.png" />
+		<meta
+			property="og:image:alt"
+			content="A login form against a background of a blurry image. Click to visit website."
+		/>
+		<meta property="og:description" content="Project by Emmanuel Jose" />
+		<meta property="og:url" content="https://emjose.github.io/password-strength-background/" />
+		<meta property="og:type" content="website" />
+		<meta name="twitter:card" content="summary" />
+		<meta
+			name="keywords"
+			content="HTML, CSS, JavaScript, analog, login form, blurry background, password strength"
+		/>
+		<meta name="author" content="Emmanuel Jose" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.8.11/tailwind.min.css"
@@ -17,6 +32,8 @@
 	<body>
 		<a
 			href="https://github.com/emjose/password-strength-background/#header"
+			target="_blank"
+			rel="noopener noreferrer"
 			class="github-corner"
 			aria-label="View source on GitHub"
 			><svg
