update meta tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta property="og:title" content="Password Strength Background" />
-		<meta property="og:image" content="Assets/meta-006-password.png" />
+		<meta
+			property="og:image"
+			content="https://emjose.github.io/password-strength-background/Assets/meta-006-password.png"
+		/>
 		<meta
 			property="og:image:alt"
 			content="A login form against a background of a blurry image. Click to visit website."
@@ -27,6 +30,7 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Password Strength Backround</title>
 		<link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
+		<link rel="canonical" href="https://emjose.github.io/password-strength-background/" />
 	</head>
 
 	<body>
