--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta property="og:title" content="Password Strength Background" />
-		<meta
-			property="og:image"
-			content="https://emjose.github.io/password-strength-background/Assets/meta-006-password.png"
-		/>
-		<meta
-			property="og:image:alt"
-			content="A login form against a background of a blurry image. Click to visit website."
-		/>
+		<meta property="og:image"
+			content="https://emjose.github.io/password-strength-background/Assets/meta-006-password.png" />
+		<meta property="og:image:alt"
+			content="A login form against a background of a blurry image. Click to visit website." />
 		<meta property="og:description" content="Project by Emmanuel Jose" />
 		<meta property="og:url" content="https://emjose.github.io/password-strength-background/" />
 		<meta property="og:type" content="website" />
 		<meta name="twitter:card" content="summary" />
-		<meta
-			name="keywords"
-			content="HTML, CSS, JavaScript, analog, login form, blurry background, password strength"
-		/>
+		<meta name="keywords"
+			content="HTML, CSS, JavaScript, analog, login form, blurry background, password strength" />
 		<meta name="author" content="Emmanuel Jose" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.8.11/tailwind.min.css"
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.8.11/tailwind.min.css"
 			integrity="sha512-KO1h5ynYuqsFuEicc7DmOQc+S9m2xiCKYlC3zcZCSEw0RGDsxcMnppRaMZnb0DdzTDPaW22ID/gAGCZ9i+RT/w=="
-			crossorigin="anonymous"
-		/>
+			crossorigin="anonymous" />
 		<link rel="stylesheet" href="style.css" />
 		<title>Password Strength Backround</title>
 		<link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
@@ -34,58 +26,7 @@
 	</head>
 
 	<body>
-		<a
-			href="https://github.com/emjose/password-strength-background/#header"
-			target="_blank"
-			rel="noopener noreferrer"
-			class="github-corner"
-			aria-label="View source on GitHub"
-			><svg
-				width="80"
-				height="80"
-				viewBox="0 0 250 250"
-				style="fill: #fff; color: #6db9e3; position: absolute; top: 0; border: 0; right: 0"
-				aria-hidden="true"
-			>
-				<path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-				<path
-					d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
-					fill="currentColor"
-					style="transform-origin: 130px 106px"
-					class="octo-arm"
-				></path>
-				<path
-					d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
-					fill="currentColor"
-					class="octo-body"
-				></path></svg></a
-		><style>
-			.github-corner:hover .octo-arm {
-				animation: octocat-wave 560ms ease-in-out;
-			}
-			@keyframes octocat-wave {
-				0%,
-				100% {
-					transform: rotate(0);
-				}
-				20%,
-				60% {
-					transform: rotate(-25deg);
-				}
-				40%,
-				80% {
-					transform: rotate(10deg);
-				}
-			}
-			@media (max-width: 500px) {
-				.github-corner:hover .octo-arm {
-					animation: none;
-				}
-				.github-corner .octo-arm {
-					animation: octocat-wave 560ms ease-in-out;
-				}
-			}
-		</style>
+
 		<div class="background" id="background"></div>
 		<div class="bg-white rounded p-6 text-center shadow-md">
 			<h1 class="text-3xl">Image Password Strength</h1>
@@ -97,18 +38,32 @@
 
 			<div class="my-4 text-left">
 				<label for="email" class="text-gray-900">Password:</label>
-				<input
-					type="password"
-					class="border block w-full p-2 mt-2 rounded"
-					id="password"
-					placeholder="Enter Password"
-				/>
+				<input type="password" class="border block w-full p-2 mt-2 rounded" id="password"
+					placeholder="Enter Password" />
 			</div>
 
 			<button class="bg-black text-white py-2 mt-4 inline-block w-full rounded" type="submit">Submit</button>
 		</div>
+
+		<a href="https://github.com/emjose/password-strength-background/#header" target="_blank"
+			rel="noopener noreferrer" class="github-corner" title="View source on GitHub"
+			aria-label="View source on GitHub">
+			<svg width="80" height="80" viewBox="0 0 250 250"
+				style="fill: var(--github-fill); color: var(--github-color); position: absolute; top: 0; border: 0; right: 0"
+				aria-hidden="true">
+				<path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+				<path
+					d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+					fill="currentColor" style="transform-origin: 130px 106px" class="octo-arm"></path>
+				<path
+					d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+					fill="currentColor" class="octo-body"></path>
+			</svg>
+		</a>
+
 		<script src="script.js"></script>
 	</body>
+
 </html>
 
 <!-- Emmanuel Jose logo and favicon. © Emmanuel Jose. All Rights Reserved. -->
